Fixing overflow home page

--- a/src/index.css
+++ b/src/index.css
@@ -270,8 +270,8 @@ a.no-link {
 .HomeMinettText {
   font-family: var(--font-abc-maxi-sharp);
   font-weight: 200;
-  font-size: 10vw;
-  line-height: 10vw;
+  font-size: 210px;
+  line-height: 276px;
   font-variation-settings: 'wght' 200;
 }
 
@@ -302,7 +302,6 @@ a.no-link {
 }
 
 .HomeStart {
-  margin-top: 100px;
   font-family: var(--font-abc-maxi-round);
   position: relative;
   background-color: white;
@@ -319,6 +318,12 @@ a.no-link {
   color: var(--black);
   width: 150px;
   height: 150px;
-  top: calc(50% - 75px);
+  top: calc(0%);
   left: calc(50% - 75px);
+}
+
+.Home {
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
